--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 
 body {
    background-color: white;
-
     opacity: 0.9;
   font-family: 'Poppins', helvetica;
   font-size: 15px;
@@ -213,7 +212,7 @@ p {
 
 nav {
   position: fixed;
-   background-color: rgba(0, 0, 0, 0.7);
+   background-color:#004085;
   z-index: 1000;
   width: 100%;
  padding: 10px;
