--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,44 @@ nav ul li a {
   color: white;
   overflow: hidden;
 }
+.main-title,
+.sub-title,
+.tagline {
+  color: #D2042D;
+text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.6);
+}
 
+/* Zaidi ya hapo unaweza ongeza size na font kama awali */
+.main-title {
+  font-size: 80px;
+  font-family: 'Lucida Bright', serif;
+  font-weight: bold;
+}
+
+.sub-title {
+  font-size: 40px;
+  margin-right: 50px;
+}
+
+.tagline {
+  font-weight: bold;
+  text-align: center;
+  margin-top: 70px;
+}
+@media screen and (max-width: 600px) {
+  .main-title {
+    font-size: 40px;
+  }
+
+  .sub-title {
+    font-size: 24px;
+  }
+
+  .tagline {
+    font-size: 18px;
+    margin-top: 30px;
+  }
+}
 #header.home .overlay {
   position: absolute;
   top: 0;
